# ScreenRecorder

./: CMakeLists.txt  README.md  gemini.md
src/: main.cpp  resources.qrc  selectionwidget.cpp  selectionwidget.h  settingsdialog.cpp  settingsdialog.h  webcamselectiondialog.cpp  webcamselectiondialog.h  windowselectiondialog.cpp  windowselectiondialog.h
