
cmake_minimum_required(VERSION 3.16)

project(ScreenRecorder LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

find_package(Qt6 COMPONENTS Core Gui Widgets REQUIRED)

add_executable(ScreenRecorder
  src/main.cpp
  src/selectionwidget.cpp
  src/windowselectiondialog.cpp
  src/webcamselectiondialog.cpp
  src/settingsdialog.cpp
)

target_link_libraries(ScreenRecorder
  Qt6::Core
  Qt6::Gui
  Qt6::Widgets
)
